build views and handlecrud operations

--- a/example-markup/new_book.html
+++ b/example-markup/new_book.html
@@ -29,7 +29,7 @@
             <input type="submit" value="Create New Book">
         </p>
         <p>
-            <a class="button" href="all_books.html">Cancel</a>
+            <a class="button" href="/books">Cancel</a>
         </p>
     </form>
 </body>
